@@ -2,12 +2,14 @@ package ua.edu.ukma.schedule.services.impl;
 
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
+import org.thymeleaf.expression.Lists;
 import ua.edu.ukma.schedule.model.Permissions;
 import ua.edu.ukma.schedule.model.Staff;
 import ua.edu.ukma.schedule.model.Student;
 import ua.edu.ukma.schedule.repositories.PermissionRepository;
 import ua.edu.ukma.schedule.services.StaffService;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -20,7 +22,7 @@ public class StaffServiceImpl extends AbstractCRUDService<Staff> implements Staf
     }
     @Override
     public Staff save(Staff user){
-        user.setPermissions(List.of(permissionRepository.findByPermission(Permissions.PermissionName.METHODIST)));
+        user.setPermissions(Arrays.asList(permissionRepository.findByPermission(Permissions.PermissionName.METHODIST)));
         return super.save(user);
     }
 }
